# todo-ai

./: .gitignore  Dockerfile  app.css  bun.lockb  default.nix  docker-compose.yml  dump.rdb  package.json  pyproject.toml
docker/: default.conf
src/: manage.py
src/todo/: settings.py  urls.py
src/todo/landing/: apps.py  forms.py  models.py  urls.py  views.py
src/todo/landing/migrations/: 0001_initiate.py  0002_intitate_table_profile.py  0003_initial.py
src/todo/landing/templates/register/: index.html
src/todo/static/: tailwind.css
src/todo/subscriptions/migrations/: 0001_custom_migration.py
src/todo/templates/: base.html  base_without_header.html
src/todo/templates/landing/: index.html
src/todo/templates/list/: index.html
src/todo/templates/list/partials/: edit_todo.html  list_todo.html
src/todo/templates/login/: index.html
src/todo/templates/register/: index.html
src/todo/todos/: models.py  urls.py  views.py
src/todo/todos/migrations/: 0001_initiate.py  0002_adding_fk.py  0004_merge_0002_adding_fk_0003_adding_table.py  0005_adding_table_usage.py  0006_remove_column.py  0007_merge_0005_adding_table_usage_0006_remove_column.py  0008_adding_column_accomplished.py  0009_merge_20240608_1250.py  0010_initial.py
